// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lazyStyleTag options should pass "options" to "insert" function and unuse: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
</head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`lazyStyleTag options should pass "options" to "insert" function and unuse: errors 1`] = `Array []`;

exports[`lazyStyleTag options should pass "options" to "insert" function and unuse: warnings 1`] = `Array []`;

exports[`lazyStyleTag options should pass "options" to "insert" function: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
</head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


<style>body {
  color: red;
}
</style></body></html>"
`;

exports[`lazyStyleTag options should pass "options" to "insert" function: errors 1`] = `Array []`;

exports[`lazyStyleTag options should pass "options" to "insert" function: warnings 1`] = `Array []`;

exports[`lazyStyleTag options should pass "options" to "styleTagTransform" function: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style>body {
  color: red;
}

.some-element {color: red;}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`lazyStyleTag options should pass "options" to "styleTagTransform" function: errors 1`] = `Array []`;

exports[`lazyStyleTag options should pass "options" to "styleTagTransform" function: warnings 1`] = `Array []`;
